Name:                lazy-redis
Version:             0.1
Synopsis:            Low-effort Redis library for Haskell
-- Description:         
License:             MIT
License-file:        LICENSE
Author:              Tom Brow
Maintainer:          tebrow@gmail.com
-- Copyright:
           
Category:            Database
Build-type:          Simple
Cabal-version:       >= 1.10

Extra-source-files: 
 LICENSE
 README.md

Library
  Default-language: Haskell98
  Hs-source-dirs:   src

  Exposed-modules:
    Database.Redis.Data
  
  Build-depends:
    base == 4.*
  
Test-suite test-lazy-redis
  Default-language: Haskell98
  Hs-source-dirs:   test src
  Type:             exitcode-stdio-1.0
  Main-is:          Main.hs
  Build-depends:
    base,
    HUnit >= 1.2.2,
    test-framework-hunit >= 0.2.6,
    test-framework >= 0.3.3
  