Name:                redis-iteratee
Version:             0.1
Synopsis:            Iteratee-based Redis client for Haskell
-- Description:         
License:             MIT
License-file:        LICENSE
Author:              Tom Brow
Maintainer:          tebrow@gmail.com
-- Copyright:
           
Category:            Database
Build-type:          Simple
Cabal-version:       >= 1.10

Extra-source-files: 
 LICENSE
 README.md

Library
  Default-language: Haskell98
  Hs-source-dirs:   src

  Exposed-modules:
    Database.Redis.Data
    Database.Redis.Data.Iteratee
    Database.Redis.Connection
    Database.Redis.Commands
  
  Build-depends:
    base == 4.*,
    network,
    enumerator >= 0.4.9.1,
    bytestring >= 0.9.1
  
Test-suite test-lazy-redis-pure
  Default-language: Haskell98
  Hs-source-dirs:   test/pure src
  Type:             exitcode-stdio-1.0
  Main-is:          Main.hs
  Build-depends:
    base,
    network,
    enumerator >= 0.4.9.1,
    bytestring >= 0.9.1,
    HUnit >= 1.2.2,
    test-framework-hunit >= 0.2.6,
    test-framework >= 0.3.3
    
Test-suite test-lazy-redis-io
  Default-language: Haskell98
  Hs-source-dirs:   test/io src
  Type:             exitcode-stdio-1.0
  Main-is:          Main.hs
  Build-depends:
    base,
    network,
    enumerator >= 0.4.9.1,
    bytestring >= 0.9.1,
    HUnit >= 1.2.2,
    test-framework-hunit >= 0.2.6,
    test-framework >= 0.3.3
  